# dittobytes

./: .gitignore  Dockerfile  README.md  makefile
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml  validation.yml
beacon/: main.c
beacon/demo/: linux.c  macos.c  windows.c
builds/: .gitignore  loader-lin-amd64  loader-lin-arm64  loader-linux-arm64  loader-linux-x64  loader-mac-amd64  loader-mac-arm64  loader-macos-arm64  loader-macos-x64
code/: beacon.c
code/examples/example-basics/: example-basics.c
code/examples/example-bof/: example-bof.c
code/examples/example-calc/: example-calc.c
code/examples/example-cpp/: example-cpp.cpp
ditto/loaders/: makefile
ditto/scripts/: requirements.txt
ditto/scripts/make/: extract-text-segment.py  modify-intermediate-metadata.py  notify-user-about-bof.py
ditto/scripts/noise/: noise.py
ditto/scripts/tests/: test.py
ditto/transpilers/machine/: makefile
loader/linux/lib/: error.c
loader/windows/lib/: error.c
loaders/: Dockerfile  makefile
loaders/linux/lib/: console.c
loaders/linux/src/: main.c
loaders/macos/src/: main.c
loaders/windows/src/: main.c
scripts/: extract-text-segment.py  measure-levenshtein-distance.py  requirements.txt  verify-feature-test.py  verify-levenshtein-distance.py
scripts/make/: verify-levenshtein-distance.py
scripts/tests/: test.py
tests/: test_1_mov_reg_imm_int16.c  test_1_mov_reg_imm_int32.c  test_1_mov_reg_imm_int8.c  test_1_mov_reg_imm_uint16.c  test_1_mov_reg_imm_uint32.c  test_1_mov_reg_imm_uint64.c  test_1_mov_reg_imm_uint8.c  test_1_random_register_allocation.c  test_2_simple_functin_call.c  test_2_simple_functin_call_with_arguments.c  test_3_sophisticated_code_mathematics.c  test_3_sophisticated_code_matrix_multiplication.c  test_3_sophisticated_code_strings.c  test_mov_reg_imm_int16.c  test_mov_reg_imm_int32.c  test_mov_reg_imm_int64.c  test_mov_reg_imm_int8.c  test_mov_reg_imm_uint16.c  test_mov_reg_imm_uint32.c  test_mov_reg_imm_uint64.c  test_mov_reg_imm_uint8.c  test_random_register_allocation.c  test_return_10th_prime_number.c  test_sophisticated_code_mathematics.c  test_sophisticated_code_matrix_multiplication.c  test_sophisticated_code_prime_number.c  test_sophisticated_code_strings.c
transpiler/: Dockerfile  makefile
transpiler/src/: CMakeLists.txt  PolymorphicTranspiler.cpp
transpilers/: Dockerfile
transpilers/machine/: Dockerfile  makefile
transpilers/machine/src/: CMakeLists.txt  MachineTranspiler.cpp
transpilers/machine/src/helpers/: RandomHelper.cpp
transpilers/machine/src/modules/: ModifyImmediateModule.c  TestSubstitution.c
transpilers/machine/src/modules/amd64/: AMD64_ModifyImmediateModule.cpp
transpilers/machine/src/modules/arm64/: ARM64_ModifyImmediateModule.cpp
transpilers/machine/src/modules/modify_mov_immediate/: ModifyMovImmediateModule.cpp
transpilers/machine/src/modules/modify_mov_immediate/options_amd64/: ModifyMovImmediateOptionAMD64_XOR.cpp
transpilers/machine/src/modules/modify_mov_immediate/options_arm64/: ModifyMovImmediateOptionARM64_XOR.cpp
transpilers/machine/src/modules/modify_xor_reg_reg/: ModifyXorRegRegModule.cpp
transpilers/machine/src/modules/modify_xor_reg_reg/options_amd64/: ModifyXorRegRegOptionAMD64.cpp
transpilers/machine/src/modules/modify_xor_reg_reg/options_arm64/: ModifyXorRegRegOptionARM64.cpp
transpilers/machine/src/modules/transform_mov_immediates/: TransformMovImmediatesModule.cpp
transpilers/machine/src/modules/transform_mov_immediates/options_amd64/: TransformMovImmediatesOptionAMD64_SUB.cpp  TransformMovImmediatesOptionAMD64_XOR.cpp
transpilers/machine/src/modules/transform_mov_immediates/options_arm64/: TransformMovImmediatesOptionARM64_SUB.cpp  TransformMovImmediatesOptionARM64_XOR.cpp
transpilers/machine/src/modules/transform_nullifications/options_amd64/: TransformNullificationsOptionAMD64.cpp
(+132 files in other folders)
